Fix to .confirmationDialogPanel z-index problem

--- a/php/master/assets/sass/application.scss
+++ b/php/master/assets/sass/application.scss
@@ -596,6 +596,7 @@ td.RejectedStateDecoration div div div
   color: #FFFFFF;
   border-radius: 12px;
   font-weight: bold;
+  z-index: 3;
 }
 
 .confirmationDialogPanel button {
